[package]
name = "cyberspace_emissary"
description = "Game for Rusty Game Jam (June 2022)"
version = "0.1.0"
edition = "2021"
authors = [
    "Mark Lagodych <lgd.mrk@gmail.com>",
    "Penny James aka Black Sheep"
]
license = "GPL-3.0-or-later"

[[bin]]
name = "cybersem"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
crossterm = {version="^0.23.0", optional=true}

js-sys = {version="^0.3.57", optional=true}
wasm-bindgen = {version="^0.2.80", optional=true}

[dependencies.web-sys]
version = "^0.3.4"
features = [
  'console',
  'Window',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'TextMetrics'
]

[features]
default = ["wasm_backend"]

terminal_backend = ["crossterm"]
wasm_backend = ["js-sys", "wasm-bindgen"]